Updated resume link

--- a/holiday-market-venture.html
+++ b/holiday-market-venture.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Title</title>
+    <title>Holiday Market Venture</title>
     <!--Stylesheet and JavaScript files-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
@@ -45,7 +45,7 @@
             <li><a href="index.html#hero"> <i class="fa-regular fa-house"></i> Home</a></li>
             <li><a href="index.html#about"> <i class="fa-regular fa-user"></i> About</a></li>
             <li><a href="projects.html"> <i class="fa-regular fa-folder"></i> Projects</a></li>
-            <li><a href="https://drive.google.com/file/d/1gQmgitE46qrUP_dNsPT9-fQWPlo2VsbW/view?usp=sharing"
+            <li><a href="https://drive.google.com/file/d/181NMea3o-SsKNRf1J7zikc1YyJmsRFDe/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer"> <i class="fa-regular fa-file"></i> Resume </a></li>
             <li><a href="index.html#contact"> <i class="fa-regular fa-envelope"></i> Contact</i></a></li>
         </ul>
